fix date picker cutoff in mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,8 @@ body {
 }
 
 .container {
+  display: flex;
+  justify-content: center;
   margin: 5rem auto;
 }
 
